<resources>
    <string name="app_name">FruitQuiz</string>
    <string name="welcome">Welcome</string>
    <string name="fruitquiz_app">FruitQuiz App</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="question">"What's this fruit name?"</string>
    <string name="name">Name</string>
    <string name="start">START</string>
    <string name="option">option</string>
    <string name="submit">SUBMIT</string>
    <string name="_0_10">0/10</string>
    <string name="result">Result</string>
    <string name="finish">Finish</string>
    <string name="hey_congrats">Hey, Congrats</string>
    <string name="trophy_image">Trophy image</string>
</resources>